# Godot-xxHash

./: .gitignore  ASSET_STORE_DESCRIPTION.md  CHANGELOG_1.0.0_to_1.0.3.md  README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml
addons/FoundationXxHash/: CMakeLists.txt  FoundationXxHash.gdextension  extension.manifest.json  plugin.cfg
addons/FoundationXxHash/CSharp/: XxHash.cs
addons/FoundationXxHash/src/private/: XxHash.cpp  XxHashExtension.cpp  register_types.cpp
addons/FoundationXxHash/src/public/: XxHash.h  XxHashExtension.h  register_types.h
